--- a/public/views/css/homework-5/index.html
+++ b/public/views/css/homework-5/index.html
@@ -17,7 +17,7 @@
       <div class="content">
         <div class="container">
           <div class="row">
-            <aside class="column col-sm-3">
+            <aside class="column col-md-3">
               <div class="filter">
                 <form>
                   <div class="filter__section">
@@ -38,10 +38,10 @@
                 </form>
               </div>
             </aside>
-            <div class="column col-sm-9">
+            <div class="column col-md-9">
               <main>
                 <div class="row">
-                  <div class="column col-mb-6 col-md-4">
+                  <div class="column col-lg-4 col-md-6 col-sm-4 col-mb-6">
                     <div class="card">
                       <div class="card__inner">
                         <div class="card__image bg-image">
@@ -50,7 +50,7 @@
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__text">
+                          <h3 class="card__content-title">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -58,17 +58,17 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button--size button--theme" type="button">Share</button>
+                              <button class="button button--size_default button--theme_green" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button--size button--theme">Explore</a>
+                              <a href="#" class="button button--size_default button--theme_green">Explore</a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="column col-mb-6 col-md-4">
+                  <div class="column col-mb-6 col-sm-4 col-md-6 col-lg-4">
                     <div class="card">
                       <div class="card__inner">
                         <div class="card__image bg-image">
@@ -77,7 +77,7 @@
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__text">
+                          <h3 class="card__content-title">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -85,17 +85,17 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button--size button--theme" type="button">Share</button>
+                              <button class="button button--size_default button--theme_green" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button--size button--theme">Explore</a>
+                              <a href="#" class="button button--size_default button--theme_green">Explore</a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="column col-mb-6 col-md-4">
+                  <div class="column col-mb-6 col-sm-4 col-md-6 col-lg-4">
                     <div class="card">
                       <div class="card__inner">
                         <div class="card__image bg-image">
@@ -104,7 +104,7 @@
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__text">
+                          <h3 class="card__content-title">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -112,17 +112,17 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button--size button--theme" type="button">Share</button>
+                              <button class="button button--size_default button--theme_green" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button--size button--theme">Explore</a>
+                              <a href="#" class="button button--size_default button--theme_green">Explore</a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="column col-mb-6 col-md-4">
+                  <div class="column col-mb-6 col-sm-4 col-md-6 col-lg-4">
                     <div class="card">
                       <div class="card__inner">
                         <div class="card__image bg-image">
@@ -131,7 +131,7 @@
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__text">
+                          <h3 class="card__content-title">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -139,17 +139,17 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button--size button--theme" type="button">Share</button>
+                              <button class="button button--size_default button--theme_green" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button--size button--theme">Explore</a>
+                              <a href="#" class="button button--size_default button--theme_green">Explore</a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="column col-mb-6 col-md-4">
+                  <div class="column col-mb-6 col-sm-4 col-md-6 col-lg-4">
                     <div class="card">
                       <div class="card__inner">
                         <div class="card__image bg-image">
@@ -158,7 +158,7 @@
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__text">
+                          <h3 class="card__content-title">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -166,17 +166,17 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button--size button--theme" type="button">Share</button>
+                              <button class="button button--size_default button--theme_green" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button--size button--theme">Explore</a>
+                              <a href="#" class="button button--size_default button--theme_green">Explore</a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="column col-mb-6 col-md-4">
+                  <div class="column col-mb-6 col-sm-4 col-md-6 col-lg-4">
                     <div class="card">
                       <div class="card__inner">
                         <div class="card__image bg-image">
@@ -185,7 +185,7 @@
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__text">
+                          <h3 class="card__content-title">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -193,17 +193,17 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button--size button--theme" type="button">Share</button>
+                              <button class="button button--size_default button--theme_green" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button--size button--theme">Explore</a>
+                              <a href="#" class="button button--size_default button--theme_green">Explore</a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="column col-mb-6 col-md-4">
+                  <div class="column col-mb-6 col-sm-4 col-md-6 col-lg-4">
                     <div class="card">
                       <div class="card__inner">
                         <div class="card__image bg-image">
@@ -212,7 +212,7 @@
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__text">
+                          <h3 class="card__content-title">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -220,17 +220,17 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button--size button--theme" type="button">Share</button>
+                              <button class="button button--size_default button--theme_green" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button--size button--theme">Explore</a>
+                              <a href="#" class="button button--size_default button--theme_green">Explore</a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="column col-mb-6 col-md-4">
+                  <div class="column col-mb-6 col-sm-4 col-md-6 col-lg-4">
                     <div class="card">
                       <div class="card__inner">
                         <div class="card__image bg-image">
@@ -239,7 +239,7 @@
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__text">
+                          <h3 class="card__content-title">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -247,10 +247,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button--size button--theme" type="button">Share</button>
+                              <button class="button button--size_default button--theme_green" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button--size button--theme">Explore</a>
+                              <a href="#" class="button button--size_default button--theme_green">Explore</a>
                             </div>
                           </div>
                         </div>
