--- a/public/views/css/homework-6/index.html
+++ b/public/views/css/homework-6/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+  <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,8 +10,51 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-     <div class="wrapper">
-       
-     </div> 
+    <div class="container">
+      <ul class="collection">
+        <li class="collection-item">
+          <div class="collection-item__cell">
+            <div class="collection-item__icon collection-item__icon--smile"></div>
+          </div>
+          <div class="collection-item__cell collection-item__cell--align_middle collection-item__cell--full-width">
+            <p class="collection-item__text">
+              Smile
+            </p>
+          </div>
+          <div class="collection-item__cell">
+            <div class="badge badge--approved">Approved</div>
+          </div>
+        </li>
+        <li class="collection-item">
+          <div class="collection-item__cell">
+            <div class="collection-item__icon collection-item__icon--edit"></div>
+          </div>
+          <div class="collection-item__cell collection-item__cell--align_middle collection-item__cell--full-width">
+            <p class="collection-item__text">
+              Edit
+            </p>
+          </div>
+          <div class="collection-item__cell">
+            <div class="badge badge--pending">Pending</div>
+          </div>
+        </li>
+        <li class="collection-item">
+          <div class="collection-item__cell">
+            <div class="collection-item__icon collection-item__icon--cat"></div>
+          </div>
+          <div class="collection-item__cell collection-item__cell--align_middle collection-item__cell--full-width">
+            <p class="collection-item__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae velit dicta dolorum officiis tempore reprehenderit aliquam recusandae in non, corrupti quasi praesentium facilis sint, tenetur accusamus laborum. Nemo consectetur aut, odit veritatis, delectus distinctio eveniet, libero modi in quasi laboriosam.
+            </p>
+          </div>
+          <div class="collection-item__cell">
+            <div class="badge badge--error">Error</div>
+          </div>
+        </li>
+      </ul>
+      <div class="gradient">
+        <div class="gradient--color"></div>
+      </div>
+    </div>
   </body>
 </html>
