--- a/public/views/js/homework-3/index.html
+++ b/public/views/js/homework-3/index.html
@@ -10,7 +10,13 @@
   <script src="js/script3.js"></script> -->
   <!-- <script src="js/script4.js"></script> -->
   <!-- <script src="js/script5.js"></script> -->
-  <script src="js/script6.js"></script>
+  <!-- <script src="js/script6.js"></script> -->
+  <!-- <script src="js/script7.js"></script> -->
+  <!-- <script src="js/script8.js"></script> -->
+  <!-- <script src="js/script9.js"></script> -->
+  <!-- <script src="js/script10.js"></script> -->
+  <!-- <script src="js/script11.js"></script> -->
+  <!-- <script src="js/script12.js"></script> -->
   </head>
   <body>
 
