--- a/public/views/js/homework-4/index.html
+++ b/public/views/js/homework-4/index.html
@@ -14,7 +14,7 @@
   <!-- <script src="js/script7.js"></script> -->
   <!-- <script src="js/script8.js"></script> -->
   <!-- <script src="js/script9.js"></script> -->
-  <script src="js/script10.js"></script>
+  <!-- <script src="js/script10.js"></script> -->
   <!-- <script src="js/script11.js"></script> -->
   <!-- <script src="js/script12.js"></script> -->
   </head>
